test_suite/tests/ui/remote/bad_remote.stderr
error: failed to parse path: "~~~"
  --> $DIR/bad_remote.rs:11:18
   |
11 | #[serde(remote = "~~~")]
   |                  ^^^^^

error: aborting due to previous error

